openhab/openhab/02-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openhab-deployment
  namespace: openhab
  labels:
    app: openhab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openhab
  template:
    metadata:
      labels:
        app: openhab
    spec:
      # to allow bluetooth access
      # hostNetwork: true
      # dnsPolicy: ClusterFirstWithHostNet

      volumes:
      - name: openhab-conf
        persistentVolumeClaim:
          claimName: openhab-conf-pvc
      - name: openhab-userdata
        persistentVolumeClaim:
          claimName: openhab-userdata-pvc
      - name: openhab-conf-repo
        persistentVolumeClaim:
          claimName: openhab-conf-repo-pvc
      - name: zstick
        hostPath:
          path: /dev/ttyUSB0

      containers:
      - name: openhab
        image: openhab/openhab:2.5.10
        ports:
        - containerPort: 8080
        securityContext:
          privileged: true # to allow bluetooth and zstick access, might be able to be scoped down some
        volumeMounts:
        - name: zstick
          mountPath: /dev/ttyUSB0
        - name: openhab-conf
          mountPath: /openhab/conf
        - name: openhab-userdata
          mountPath: /openhab/userdata
