openhab/openhab/03-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: openhab
  namespace: openhab
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`openhab.home.goodhouse.io`)
    services:
    - kind: Service
      name: openhab
      namespace: openhab
      port: 80
  tls:
    certResolver: letsencrypt
